<resources>
    <string name="app_name">Mobil Uygulamalar Ders Örnekleri</string>
    <string name="btnOnayla">Onayla</string>

    <string name="unite1">Ünite 1 (Mobil Uygulama Geliştirmeye Hazırlık)</string>
    <string name="unite2">Ünite 2 (Ekran Tasarımı)</string>
    <string name="unite3">Ünite 3 (Temel Komutlar)</string>
    <string name="unite4">Ünite 4 (Karar ve Döngü Yapıları)</string>
    <string name="unite5">Ünite 5 (Gelişmiş Komutlar)</string>
    <string name="unite6">Ünite 6 (Uygulama Tasarımı)</string>
    <string name="unite7">Ünite 7 (Veritabanı İşlemleri)</string>
    <string name="unite8">Ünite 8 (Gelişmiş Uygulama Tasarlama)</string>
    <string name="unite9">Ünite 9 (Uygulama Yayımlama)</string>

    <!-- ********************************************************** -->
    <!-- **************** ÜNİTE 4 TANIMLAMALARI ******************* -->
    <!-- ********************************************************** -->
    <string name="u4_uyg1">Uygulama 1 \n(100 den Büyük mü)</string>
    <string name="u4_uyg2">Uygulama 2 \n(Hangisi Büyük)</string>
    <string name="u4_uyg3">Uygulama 3 \n(Login İşlemi)</string>
    <string name="u4_uyg4">Uygulama 4 \n(Konum Servisleri)</string>
    <string name="u4_uyg5">Uygulama 5 \n(Ders Notu Girişi)</string>
    <string name="u4_uyg6">Uygulama 6 \n(Switch-Case Uygulaması)</string>
    <string name="u4_uyg7">Uygulama 7 \n(For Döngü Örneği-1)</string>
    <string name="u4_uyg8">Uygulama 8 \n(For Döngü Örneği-2)</string>
    <string name="u4_uyg9">Uygulama 9 \n(Tek - Çift)</string>
    <string name="u4_uyg10">Uygulama 10 \n(While ile Faktoriyel Hesaplama)</string>
    <string name="u4_goldsoru1">GoldSoru 1 \n(Çarpım Tablosu)</string>
    <string name="u4_goldsoru2">GoldSoru 2 \n(Tek ve Çift Sayıları Topla)</string>
    <string name="u4_goldsoru3">GoldSoru 3 \n(Dünya Kupası Kura Çekimi)</string>

    <!-- ********************************************************** -->
    <!-- **************** ÜNİTE 5 TANIMLAMALARI ******************* -->
    <!-- ********************************************************** -->
    <string name="u5_uyg1">Uygulama 1 \n(Değer Döndürmeyen Metodlar)</string>
    <string name="u5_uyg2">Uygulama 2 \n(Değer Döndüren Metotlar)</string>
    <string name="u5_uyg3">Uygulama 3 \n(Parametre Alan Metotlar)</string>
    <string name="u5_uyg4">Uygulama 4 \n(Metodlarda Aşırı Yükleme)</string>
    <string name="u5_uyg5">Uygulama 5 \n(Sınıflar)</string>
    <string name="u5_uyg6">Uygulama 6 \n(Constructor)</string>
    <string name="u5_uyg7">Uygulama 7 \n(Kapsülleme)</string>
    <string name="u5_uyg8">Uygulama 8 \n(Kalıtım)</string>
    <string name="u5_uyg9">Uygulama 9 \n(Kalıtım-2)</string>
    <string name="u5_uyg10">Uygulama 10 \n(Çokbiçimlilik)</string>
    <string name="u5_uyg11">Uygulama 11 \n(Diziler)</string>
    <string name="u5_uyg12">Uygulama 12 \n(ArrayList)</string>
    <string name="u5_uyg13">Uygulama 13 \n(Tüm Konu)</string>
    <string name="u5_ss_165">Sıra Sizde 165.Sayfa \n(İki Sayıyı Toplayan Metod)</string>
    <string name="u5_ss_169">Sıra Sizde 169.Sayfa \n(Dört İşlem Metodlu)</string>
    <string name="u5_ss_173">Sıra Sizde 173.Sayfa \n(Metodlarda Aşırı Yükleme)</string>
    <string name="u5_ss_181">Sıra Sizde 181.Sayfa \n(Sınıf Yapısı)</string>
    <string name="u5_ss_188">Sıra Sizde 188.Sayfa \n(Constructor)</string>
    <string name="u5_ss_193">Sıra Sizde 193.Sayfa \n(Getter - Setter)</string>
    <string name="u5_ss_206">Sıra Sizde 206.Sayfa \n(Çokbiçimlilik)</string>
    <string name="u5_ss_214">Sıra Sizde 214.Sayfa \n(ArrayList)</string>
    <string name="u5_goldsoru1">Gold Soru 1 \(Hesap Makinesi)</string>


    <!-- ********************************************************** -->
    <!-- **************** ÜNİTE 6 TANIMLAMALARI ******************* -->
    <!-- ********************************************************** -->
    <string name="u6_uyg1">Uygulama 1 \n(Görsel Değiştir)</string>
    <string name="u6_uyg2">Uygulama 2 \n()</string>
    <string name="u6_uyg3">Uygulama 3 \n()</string>
    <string name="u6_uyg4">Uygulama 4 \n()</string>
    <string name="u6_uyg5">Uygulama 5 \n()</string>
    <string name="u6_uyg6">Uygulama 6 \n()</string>
    <string name="u6_uyg7">Uygulama 7 \n()</string>
    <string name="u6_uyg8">Uygulama 8 \n()</string>
    <string name="u6_uyg9">Uygulama 9 \n()</string>
    <string name="u6_uyg10">Uygulama 10 \n()</string>

    <string name="u6_ss_247">Sıra Size 247.Sayfa</string>


</resources>