<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnUyg1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg1" />

            <Button
                android:id="@+id/btnUyg2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg2"
                android:text="@string/u5_uyg2" />

            <Button
                android:id="@+id/btnUyg3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg3" />

            <Button
                android:id="@+id/btnUyg4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg4" />

            <Button
                android:id="@+id/btnUyg5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg5" />

            <Button
                android:id="@+id/btnUyg6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg6" />

            <Button
                android:id="@+id/btnUyg7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg7" />

            <Button
                android:id="@+id/btnUyg8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg8" />

            <Button
                android:id="@+id/btnUyg9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:minHeight="32dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg9"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnUyg10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg10" />

            <Button
                android:id="@+id/btnUyg11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg11" />

            <Button
                android:id="@+id/btnUyg12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg12" />

            <Button
                android:id="@+id/btnUyg13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="btnUyg1"
                android:text="@string/u5_uyg13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal|top|center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnUyg5_SS165"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:backgroundTint="@color/orange"
                android:onClick="btnUyg5_SS165"
                android:text="@string/u5_ss_165"
                android:textColor="@color/black" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>